backend crud done for frontSlider

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,13 +3,13 @@ topHeader.hours=Sun-Fri 8am-8pm
 topHeader.phone=+977-01-421 7766
 topHeader.emergency=Emergency: 1134
 topHeader.heli=Heli: 9858777112
+
+# Top Header Buttons
 topHeader.homeService=Home Service
 topHeader.appointment=Appointment
 
-# Site Logo
-siteLogoAlt=Kageshwori Manohara Nagar Hospital
-
-# Header Contact
+# Main Header
+siteLogoAlt=Far West Society
 headerContact.phone=+977-01-421 7766
 
 # Menu
@@ -21,10 +21,104 @@ menu.departments=Departments
 menu.healthPackages=Health Packages
 menu.career=Career
 menu.contact=Contact
-menu.searchPlaceholder=What are you looking for?
-menu.searchButton=Search
+
+# Cart
 menu.cartList=Cart List
 menu.standardCardiac=Standard Cardiac Checkup Package
 menu.price=Rs. 99
 menu.viewCart=View Cart
 menu.checkout=Checkout
+
+# Search
+menu.searchPlaceholder=What are you looking for?
+menu.searchButton=Search
+
+#Footer
+footer.logoAlt=Far West Society Logo
+footer.name=Far West Society
+footer.description=Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur egestas eu nunc dignissim feugiat.
+footer.quickLinks=Quick Links
+footer.workingTime=Working Time
+footer.sundayToThursday=Sunday - Thursday: 9:00 AM - 5:00 PM
+footer.friday=Friday: 9:00 AM - 1:00 PM
+footer.saturday=Saturday: Closed
+footer.contactUs=Contact Us
+footer.phone=9800000000
+footer.email=farwestsociety@gmail.com
+footer.address=Kathmandu, Nepal
+
+#Banner
+banner.title=Gandhi Tulasi Manohara Community Hospital
+banner.description=GANDHI TULASI MANOHARA COMMUNITY HOSPITAL is a non-profit medical service provider run by community organisation, with strong and modern infrastructure.
+banner.viewMore=View More
+
+#Facility
+facility.findDoctor.title=Find a Doctor
+facility.findDoctor.desc=Choose by name, specialty and more.
+facility.bookAppointment.title=Book an Appointment
+facility.bookAppointment.desc=Schedule your visit easily.
+facility.healthPackages.title=Health Packages
+facility.healthPackages.desc=Explore our preventive care packages.
+
+#Specialities
+specialities.heading=Specialities & Procedures
+specialities.viewAll=View All
+department.anesthesia=Anesthesia and Pain Management
+department.medicalOncology=Medical Oncology
+department.cardiology=Cardiology
+
+#Excellence
+excellence.heading=Area Of Excellence
+excellence.viewDetails=View Details
+excellence.dentistry=Dentistry
+excellence.medicalOncology=Medical Oncology
+excellence.cardiology=Cardiology
+excellence.dietetics=Dietetics And Nutrition
+excellence.colorectal=Colorectal Surgery
+excellence.description=Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+#founder
+founder.description=Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vehicula turpis et tortor viverra tincidunt. Phasellus auctor nec ligula eu condimentum. Vestibulum ullamcorper ultrices lacus, ac venenatis dolor.
+founder.name=Mr. Name
+founder.designation=Founder Chairman
+founder.organization=Gandhi Hospital
+
+#patientStories
+patient.name=Patient Name
+patient.description=Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt justo vel dui congue, non lobortis neque tincidunt.
+patient.button=View All
+patient.1=John Doe
+patient.2=Mary Smith
+patient.3=Robert Lee
+patient.4=Anna Taylor
+patient.5=Michael Brown
+
+#packages
+package.heading=Recommended Packages
+package.1.title=Standard Cardiac Checkup Package
+package.1.desc=Comprehensive cardiac assessment for early detection.
+package.1.oldPrice=NPR149
+package.1.price=NPR99
+package.1.button=Learn More
+
+#specialityCenter
+speciality.heading=Our Speciality Centers
+speciality.1.name=Cardiology Center
+speciality.1.desc=Comprehensive cardiac care with expert doctors and modern equipment.
+speciality.1.button=Read More
+
+#news
+news.heading=Latest News
+news.date=july 1 2024
+news.1.title=New Cardiology Wing Opened
+news.1.desc=We have inaugurated a new cardiology wing with modern equipment.
+news.1.button=Read More
+
+news.2.title=Free Health Camp
+news.2.desc=Our hospital organized a free health camp for the local community.
+news.2.button=Read More
+
+news.3.title=Doctor Training Program
+news.3.desc=Our staff attended an advanced training program for patient care.
+news.3.button=Read More
+
