--- a/src/main/resources/messages_ne.properties
+++ b/src/main/resources/messages_ne.properties
@@ -9,7 +9,7 @@ topHeader.homeService=होम सेवा
 topHeader.appointment=अपोइन्टमेन्ट
 
 # Main Header
-siteLogoAlt=गाँधी अस्पताल
+siteLogoAlt=फर वेस्ट सोसाइटी
 headerContact.phone=+977-01-421 7766
 
 # Menu
@@ -35,3 +35,92 @@ menu.searchButton=खोज्नुहोस्
 
 # Buttons
 menu.goToCart=कार्टमा जानुहोस्
+
+#Footer
+footer.logoAlt=फर वेस्ट सोसाइटी लोगो
+footer.name=फर वेस्ट सोसाइटी
+footer.description=लोरम इप्सम डोलोर सिट अमेट, कन्सेक्टेटुर एडिपिसिंग एलिट। कुराबिटर एगेस्टास यू नंक डिग्निसिम फ्युगेत।
+footer.quickLinks=छिटो लिंकहरू
+footer.workingTime=कार्य समय
+footer.sundayToThursday=आइतवार - बिहिवार: 9:00 AM - 5:00 PM
+footer.friday=शुक्रवार: 9:00 AM - 1:00 PM
+footer.saturday=शनिबार: बन्द
+footer.contactUs=हामीलाई सम्पर्क गर्नुहोस्
+footer.phone=९८००००००००
+footer.email=farwestsociety@gmail.com
+footer.address=काठमाडौं, नेपाल
+
+#Banner
+banner.title=गान्धी तुलसी मनोहरा सामुदायिक अस्पताल
+banner.description=गान्धी तुलसी मनोहरा सामुदायिक अस्पताल समुदाय संगठन द्वारा सञ्चालित नाफामुक्त चिकित्सा सेवा प्रदायक हो, आधुनिक र बलियो पूर्वाधारसहित।
+banner.viewMore=थप हेर्नुहोस्
+
+#Facilities
+facility.findDoctor.title=डाक्टर खोज्नुहोस्
+facility.findDoctor.desc=नाम, विशेषज्ञता र अन्य अनुसार छान्नुहोस्।
+facility.bookAppointment.title=अपोइन्टमेन्ट बुक गर्नुहोस्
+facility.bookAppointment.desc=आफ्नो भ्रमण सजिलै शेड्युल गर्नुहोस्।
+facility.healthPackages.title=स्वास्थ्य प्याकेजहरू
+facility.healthPackages.desc=हाम्रो रोकथाम सेवा प्याकेजहरू अन्वेषण गर्नुहोस्।
+
+#Specialities
+specialities.heading=विशेषज्ञता र प्रक्रिया
+specialities.viewAll=सबै हेर्नुहोस्
+department.anesthesia=स्नायु र पीडा व्यवस्थापन
+department.medicalOncology=मेडिकल अन्कोलोजी
+department.cardiology=कार्डियोलोजी
+
+#excellence
+excellence.heading=विशेष क्षेत्रहरू
+excellence.viewDetails=विवरण हेर्नुहोस्
+excellence.dentistry=दन्त चिकित्सा
+excellence.medicalOncology=मेडिकल अन्कोलोजी
+excellence.cardiology=कार्डियोलोजी
+excellence.dietetics=आहार विज्ञान र पोषण
+excellence.colorectal=कोलोरेक्टल शल्यक्रिया
+excellence.description=लोरम इप्सम डोलर सिट अामेट, कन्सेक्टेतुर एडिपिसिंग एलिट।
+
+#founder
+founder.description=लोरम इप्सम डोलर सिट अामेट, कन्सेक्टेतुर एडिपिसिंग एलिट। मौरिस वेहिकुला टुर्पिस एट टॉर्टर विवेरा टिंडिकंट। फासेल्लस ऑक्टर नेक लिगुला ईयु कंडिमेन्टम। भेस्टिबुलुम उल्लामकोर्पेर उल्ट्रिसेस लाकस, एसी वेनेनाटिस डोलर।
+founder.name=श्री नाम
+founder.designation=संस्थापक अध्यक्ष
+founder.organization=गांधी अस्पताल
+
+#patientStories
+patient.name=रोगीको नाम
+patient.description=लोरम इप्सम डोलर सिट अामेट, कन्सेक्टेतुर एडिपिसिंग एलिट। डोनेक टिन्डिकंट जस्टो भेल डुई कोंग, नन लोबोर्टिस नेक टिन्डिकंट।
+patient.button=सबै हेर्नुहोस्
+patient.1=जोहन डो
+patient.2=मेरी स्मिथ
+patient.3=रोबर्ट ली
+patient.4=अन्ना टेलर
+patient.5=माइकल ब्राउन
+
+#packages
+package.heading=सिफारिस गरिएका प्याकेजहरू
+package.1.title=मानक कार्डियाक जाँच प्याकेज
+package.1.desc=प्रारम्भिक पत्ता लगाउनको लागि व्यापक कार्डियाक मूल्यांकन।
+package.1.oldPrice=NPR149
+package.1.price=NPR99
+package.1.button=थप जान्नुहोस्
+
+#specialityCenter
+speciality.heading=हाम्रो विशेषज्ञता केन्द्रहरू
+speciality.1.name=कार्डियोलोजी केन्द्र
+speciality.1.desc=विशेषज्ञ चिकित्सक र आधुनिक उपकरणसहित व्यापक कार्डियाक उपचार।
+speciality.1.button=थप जान्नुहोस्
+
+#news
+news.heading=ताजा समाचार
+news.date=१ जुलाई २०२४
+news.1.title=नयाँ कार्डियोलोजी विभाग उद्घाटन
+news.1.desc=हामीले आधुनिक उपकरणसहित नयाँ कार्डियोलोजी विभाग उद्घाटन गरेका छौं।
+news.1.button=थप पढ्नुहोस्
+
+news.2.title=निशुल्क स्वास्थ्य शिविर
+news.2.desc=हाम्रो अस्पतालले स्थानीय समुदायको लागि निशुल्क स्वास्थ्य शिविर आयोजना गर्‍यो।
+news.2.button=थप पढ्नुहोस्
+
+news.3.title=डाक्टर तालिम कार्यक्रम
+news.3.desc=हाम्रो स्टाफले बिरामी हेरचाहका लागि उन्नत तालिम कार्यक्रममा भाग लिए।
+news.3.button=थप पढ्नुहोस्
